--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -237,8 +237,8 @@
                     <p style="text-align:Justify;">Affluence Business Inc' website or messages may contain links to other
                         (third-party) websites. Affluence Business Inc is not responsible for the privacy practices or the
                         content of such "other" websites. Third parties may independently collect information about
-                        website visitors when users view ads or other communications from third parties through Span
-                        Global Services products or services. Visitors must contact the third-party companies directly
+                        website visitors when users view ads or other communications from third parties through Affluence Business Inc
+                         products or services. Visitors must contact the third-party companies directly
                         regarding actions on these matters.</p>
                     <p style="text-align:Justify;">In addition, the existence of a link to another site or resource does
                         not constitute a recommendation or endorsement of that. We do not accept any responsibility or
@@ -282,8 +282,8 @@
                         contact Affluence Business Inc at:</p>
                     <p> Phone:307-213-7098<br>Email: <a href="mailto:steve@affluencebizdata.com">steve@affluencebizdata.com</a>
                     </p>
-                    <p><strong>Postal Address</strong> : <br>affluence business<br> 297 Kingsbury Grade, Suite 100,
-                        Stateline, NV 89449</p></div>
+                    <p><strong>Postal Address</strong> : <br>Affluence Business Inc<br> 1309 COFFEEN AVENUE STE 1200 SHERIDAN,  </br> WY 82801<br />
+                        </p></div>
                 <div class="clearfix"></div>
             </div>
         </div>
