--- a/templates/footer.html
+++ b/templates/footer.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="col-lg-4 col-md-4 mt-4 f-social"> <a href="/" alt="Affluence Business Inc"><img src="/static/assets/img/new-affluence-logo.png" class="respo-img" alt="Affluence Business Inc Logo"></a> </div>
                     <div class="col-lg-8 col-md-8 mt-4 footer-contact">
-                        <div class="copyright"> &copy; 2023 Affluences Business inc - <a href="#" >A Champions Group Company</a>, All rights reserved. </div>
+                        <div class="copyright"> &copy; 2023 Affluences Business inc - All rights reserved. </div>
                     </div>
                 </div>
             </div>
