--- a/templates/index.html
+++ b/templates/index.html
@@ -115,7 +115,7 @@
                             <ul>
                                 <li><a href="/total-addressable-market"><img src="/static/assets/img/Total-Addressable-Market.png" alt="Total-Addressable-Market">&nbsp;Total Addressable Market</a></li>
                                 <li><a href="/b2b-email-list"><img src="/static/assets/img/B2B-Sales-Leads.png" alt="B2B-Sales-Leads">&nbsp;B2B Sales Leads</a></li>
-                                <li><a href="/database/investors-email-list"><img src="/static/assets/img/Industry-Wise-Data.png" alt="Investors emaillist">&nbsp;Investors Email List</a></li>
+<!--                                <li><a href="/database/investors-email-list"><img src="/static/assets/img/Industry-Wise-Data.png" alt="Investors emaillist">&nbsp;Investors Email List</a></li>-->
                                 <li
                                     class="menu-has-children"><a href="/technology-lists/"><img src="/static/assets/img/Technology-Data.png" alt="Technology-Data">&nbsp;Technology Data</a>
                                     <ul>
