--- a/templates/technology-lists.html
+++ b/templates/technology-lists.html
@@ -69,69 +69,7 @@
                         <div class="contact-side"><h4>GET A FREE QUOTE</h4>
                             <p>We have got you covered on all your email and direct marketing needs</p>
                             <div class="form">
-                                <form name="f12" id="contact-form"
-                                      action=" " method="post"
-                                      onSubmit="return validationcon()"><input type="hidden" name="returnURL"
-                                                                               value=" "><input
-                                        name="title" type="hidden" value="Contact Request from Affluence Business Inc">
-                                    <div class=" form-row">
-                                        <div class="col-lg-6 form-group">
-                                            <div class="input-container"><input type="text" name="fname"
-                                                                                class="form-control" id="fname"
-                                                                                placeholder="First Name*"> <i
-                                                    class="fa fa-user icon"></i></div>
-                                        </div>
-                                        <div class="col-lg-6 form-group">
-                                            <div class="input-container"><input type="text" name="lname"
-                                                                                class="form-control" id="lname"
-                                                                                placeholder="Last Name"> <i
-                                                    class="fa fa-user icon"></i></div>
-                                        </div>
-                                    </div>
-                                    <div class=" form-row">
-                                        <div class="col-lg-6 form-group">
-                                            <div class="input-container"><input type="email" class="form-control"
-                                                                                name="email" id="email"
-                                                                                placeholder="Business Email*"> <i
-                                                    class="fa fa-envelope icon"></i></div>
-                                        </div>
-                                        <div class="col-lg-6 form-group">
-                                            <div class="input-container"><input type="text" class="form-control"
-                                                                                name="phone" id="phone"
-                                                                                placeholder="Business Phone*"> <i
-                                                    class="fa fa-phone icon"></i></div>
-                                        </div>
-                                    </div>
-                                    <div class=" form-row">
-                                        <div class="col-lg-12 form-group">
-                                            <div class="input-container"><input type="text" name="company"
-                                                                                class="form-control" id="company"
-                                                                                placeholder="Company Name*"> <i
-                                                    class="fa fa-briefcase icon"></i></div>
-                                        </div>
-                                    </div>
-                                    <div class=" form-row">
-                                        <div class="col-lg-12 form-group">
-                                            <div class="input-container"><select name="contact" class="form-control">
-                                                <option value="">No. of contacts</option>
-                                                <option value="Less than 10k">Less than 10k</option>
-                                                <option value="10k-50k">10k-50k</option>
-                                                <option value="50k-100k">50k-100k</option>
-                                                <option value="100k+">100k+</option>
-                                            </select></div>
-                                        </div>
-                                    </div>
-                                    <div class="form-group"><textarea class="form-control " name="comments" rows="1"
-                                                                      placeholder="Message*"></textarea></div>
-                                    <div class="form-group"><label><input name="newslettersubscribe"
-                                                                          value="newslettersubscribe" checked=""
-                                                                          type="checkbox"> I would like to subscribe to
-                                        your Newsletter.</label></div>
-                                    <div class="form-group mt-4">
-                                        <button type="submit" class="circle-fa">Submit Data Counts and Quote Request
-                                            &nbsp; <i class="fa icon ion-android-arrow-forward"></i></button>
-                                    </div>
-                                </form>
+                                {% include 'form.html' %}
                             </div>
                         </div>
                     </div>
@@ -372,57 +310,57 @@
                                     <td><a href="/adallom-users-list"
                                            title="Adallom ">Adallom </a></td>
                                     <td>
-                                        <a href="/adaptive-insights-users-list"
+                                        <a href="/adaptive-insights-users-list/"
                                            title="Adaptive Insights ">Adaptive Insights </a></td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <a href="/adobe-coldfusion-users-list"
+                                        <a href="/adobe-coldfusion-users-list/"
                                            title="Adobe ColdFusion ">Adobe ColdFusion </a></td>
                                     <td>
-                                        <a href="/adobe-connect-users-list"
+                                        <a href="/adobe-connect-users-list/"
                                            title="Adobe Connect ">Adobe Connect </a></td>
                                     <td>
-                                        <a href="/adobe-framemaker-users-list"
+                                        <a href="/adobe-framemaker-users-list/"
                                            title="Adobe FrameMaker ">Adobe FrameMaker </a></td>
                                     <td>
-                                        <a href="/adobe-neolane-users-list"
+                                        <a href="/adobe-neolane-users-list/"
                                            title="Adobe Neolane ">Adobe Neolane </a></td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <a href="/adp-streamline-users-list"
+                                        <a href="/adp-streamline-users-list/"
                                            title="ADP Streamline ">ADP Streamline </a></td>
-                                    <td><a href="/aegis-users-list"
+                                    <td><a href="/aegis-users-list/"
                                            title="Aegis ">Aegis </a></td>
                                     <td>
-                                        <a href="/alpha-anywhere-users-list">Alpha
+                                        <a href="/alpha-anywhere-users-list/">Alpha
                                             Anywhere </a></td>
-                                    <td><a href="/altium-users-list"
+                                    <td><a href="/altium-users-list/"
                                            title="Altium ">Altium </a></td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <a href="/aloha-pos-users-list"
+                                        <a href="/aloha-pos-users-list/"
                                            title="Aloha POS ">Aloha POS </a></td>
                                     <td><a href="/akamai-users-list"
                                            title="Akamai ">Akamai </a></td>
-                                    <td><a href="/akana-users-list"
+                                    <td><a href="/akana-users-list/"
                                            title="Akana ">Akana </a></td>
                                     <td>
-                                        <a href="/allscripts-users-list"
+                                        <a href="/allscripts-users-list/"
                                            title="Allscripts ">Allscripts </a></td>
                                 </tr>
                                 <tr>
-                                    <td><a href="/altair-users-list"
+                                    <td><a href="/altair-users-list/"
                                            title="Altair ">Altair </a></td>
                                     <td>
-                                        <a href="/alterian-users-list"
+                                        <a href="/alterian-users-list/"
                                            title="Alterian ">Alterian </a></td>
-                                    <td><a href="/amisys-users-list"
+                                    <td><a href="/amisys-users-list/"
                                            title="Amisys ">Amisys </a></td>
                                     <td>
-                                        <a href="/amazon-rds-users-list"
+                                        <a href="/amazon-rds-users-list/"
                                            title="Amazon RDS ">Amazon RDS </a></td>
                                 </tr>
                                 <tr>
