--- a/templates/data-append/b2c-email-appending.html
+++ b/templates/data-append/b2c-email-appending.html
@@ -88,40 +88,7 @@
                                 <h4>Free Append Test</h4>
                                 </br>
                                 <div class="form">
-                                    <form name="f20" id="contact-form" action="" method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Affluence Business Inc">
-                                        <div class=" form-row">
-                                            <div class="col-lg-6 form-group">
-                                                <div class="input-container"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> <i class="fa fa-user icon"></i> </div>
-                                            </div>
-                                            <div class="col-lg-6 form-group">
-                                                <div class="input-container"> <input type="text" name="lname" class="form-control" id="lname" placeholder="Last Name"> <i class="fa fa-user icon"></i> </div>
-                                            </div>
-                                        </div>
-                                        <div class=" form-row">
-                                            <div class="col-lg-6 form-group">
-                                                <div class="input-container"> <input type="email" class="form-control" name="email" id="email" placeholder="Business Email*"> <i class="fa fa-envelope icon"></i> </div>
-                                            </div>
-                                            <div class="col-lg-6 form-group">
-                                                <div class="input-container"> <input type="text" class="form-control" name="phone" id="phone" placeholder="Business Phone*"> <i class="fa fa-phone icon"></i> </div>
-                                            </div>
-                                        </div>
-                                        <div class=" form-row">
-                                            <div class="col-lg-12 form-group">
-                                                <div class="input-container"> <input type="text" name="company" class="form-control" id="company" placeholder="Company Name*"> <i class="fa fa-briefcase icon"></i> </div>
-                                            </div>
-                                        </div>
-                                        <div class="form-row">
-                                            <div class="col-lg-12 form-group">
-                                                <div class="input-container"> <select name="contact" class="form-control"> <option value="">No. of contacts</option> <option value="Less than 10k">Less than 10k</option> <option value="10k-50k">10k-50k</option> <option value="50k-100k">50k-100k</option> <option value="100k+">100k+</option></select>                                                    </div>
-                                            </div>
-                                        </div>
-                                        <div class="form-group"> <textarea class="form-control " name="comments" rows="1" placeholder="Message*"></textarea> </div>
-                                        <div class="col-lg-12 form-group">
-                                            <div class="input-container"> <label for="user" style="font-size:14px;">Upload Sample File :<span style="color:#Ff0000";>*</span></label><input type="file" name="upload" id="upload" value="" style="background:#ffffff;" /></div>
-                                        </div>
-                                        <div class="form-group"> <label><input name="newslettersubscribe" value="newslettersubscribe" checked="" type="checkbox"> I would like to subscribe to your Newsletter.</label> </div>
-                                        <div class="form-group mt-4"><button type="submit" class="circle-fa">Append Data Now! <i class="fa icon ion-android-arrow-forward"></i></button></div>
-                                    </form>
+                                    {% include 'form.html' %}
                                 </div>
                             </div>
                         </div>
