--- a/templates/email-appending.html
+++ b/templates/email-appending.html
@@ -88,13 +88,14 @@
                             <h4>Free Append Test</h4>
                             </br>
                             <div class="form">
-                                <form name="f20" id="contact-form" action="/append-mailer/" method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Affluence Business Inc">
+                                <form name="f20" id="contact-form" action="/contact-us/" method="post"  enctype="multipart/form-data"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Affluence Business Inc">
+                                    {% csrf_token %}
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group">
-                                            <div class="input-container"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> <i class="fa fa-user icon"></i> </div>
+                                            <div class="input-container"> <input type="text" name="first_name" class="form-control" id="first_name" placeholder="First Name*"> <i class="fa fa-user icon"></i> </div>
                                         </div>
                                         <div class="col-lg-6 form-group">
-                                            <div class="input-container"> <input type="text" name="lname" class="form-control" id="lname" placeholder="Last Name"> <i class="fa fa-user icon"></i> </div>
+                                            <div class="input-container"> <input type="text" name="last_name" class="form-control" id="last_name" placeholder="Last Name"> <i class="fa fa-user icon"></i> </div>
                                         </div>
                                     </div>
                                     <div class=" form-row">
@@ -112,14 +113,16 @@
                                     </div>
                                     <div class="form-row">
                                         <div class="col-lg-12 form-group">
-                                            <div class="input-container"> <select name="contact" class="form-control"> <option value="">No. of contacts</option> <option value="Less than 10k">Less than 10k</option> <option value="10k-50k">10k-50k</option> <option value="50k-100k">50k-100k</option> <option value="100k+">100k+</option></select>                                                </div>
+                                            <div class="input-container"> <select name="contacts_no" class="form-control"> <option value="">No. of contacts</option> <option value="Less than 10k">Less than 10k</option> <option value="10k-50k">10k-50k</option> <option value="50k-100k">50k-100k</option> <option value="100k+">100k+</option></select>                                                </div>
                                         </div>
                                     </div>
-                                    <div class="form-group"> <textarea class="form-control " name="comments" rows="1" placeholder="Message*"></textarea> </div>
+                                    <div class="form-group"> <textarea class="form-control " name="message" rows="1" placeholder="Message*"></textarea> </div>
                                     <div class="col-lg-12 form-group">
-                                        <div class="input-container"> <label for="user" style="font-size:14px;">Upload Sample File :<span style="color:#Ff0000";>*</span></label><input type="file" name="upload" id="upload" value="" style="background:#ffffff;" /></div>
+                                        <div class="input-container">
+                                            <label for="file" style="font-size:14px;">Upload Sample File :<span style="color:#Ff0000";>*</span></label>
+                                            <input type="file" name="file" id="file" value="" style="background:#ffffff;" /></div>
                                     </div>
-                                    <div class="form-group"> <label><input name="newslettersubscribe" value="newslettersubscribe" checked="" type="checkbox"> I would like to subscribe to your Newsletter.</label> </div>
+
                                     <div class="form-group mt-4"><button type="submit" class="circle-fa">Append Data Now! <i class="fa icon ion-android-arrow-forward"></i></button></div>
                                 </form>
                             </div>
@@ -498,19 +501,20 @@
                 <div class="col-lg-7 wow fadeInRight">
                     <div class="contact-quote">
                         <div class="form">
-                            <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Affluence Business Inc"> <input name="redirect_url" type="hidden" value=" ">
+                            <form method="post" name="contactside" class="contactForm"  action="/contact-us/" enctype="multipart/form-data">
+                                {% csrf_token %}
                                 <div class=" form-row">
-                                    <div class="col-lg-6 form-group"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> </div>
-                                    <div class="col-lg-6 form-group"> <input type="text" name="lname" class="form-control" id="lname" placeholder="Last Name*"> </div>
+                                    <div class="col-lg-6 form-group"> <input type="text" name="first_name" class="form-control" id="fname" placeholder="First Name*"> </div>
+                                    <div class="col-lg-6 form-group"> <input type="text" name="last_name" class="form-control" id="lname" placeholder="Last Name*"> </div>
                                     <div class="col-lg-6 form-group"> <input type="email" class="form-control" name="email" id="email" placeholder="Business Email*"> </div>
                                     <div class="col-lg-6 form-group"> <input type="text" class="form-control" name="phone" id="phone" placeholder="Phone*"> </div>
                                 </div>
                                 <div class="form-row">
                                     <div class="col-lg-12 form-group">
-                                        <div class="input-container"> <select name="contact" class="form-control"> <option value="">No. of contacts</option> <option value="Less than 10k">Less than 10k</option> <option value="10k-50k">10k-50k</option> <option value="50k-100k">50k-100k</option> <option value="100k+">100k+</option></select>                                            </div>
+                                        <div class="input-container"> <select name="contact_no" class="form-control"> <option value="">No. of contacts</option> <option value="Less than 10k">Less than 10k</option> <option value="10k-50k">10k-50k</option> <option value="50k-100k">50k-100k</option> <option value="100k+">100k+</option></select>                                            </div>
                                     </div>
                                 </div>
-                                <div class="form-group"> <textarea class="form-control " name="comments" rows="2" placeholder="Requirements"></textarea> </div>
+                                <div class="form-group"> <textarea class="form-control " name="message" rows="2" placeholder="Requirements"></textarea> </div>
                                 <div class="form-group"><button type="submit" class="circle-fa">CLICK HERE TO SUBMIT</button></div>
                             </form>
                         </div>
