--- a/templates/healthcare-lists/dentists-email-list.html
+++ b/templates/healthcare-lists/dentists-email-list.html
@@ -86,62 +86,7 @@
                             <h4>GET A FREE QUOTE</h4>
                             <p>We have got you covered on all your email and direct marketing needs</p>
                             <div class="form">
-                                <form name="f12" id="contact-form"
-                                    action=" " method="post"
-                                    onSubmit="return validationcon()"> <input type="hidden" name="returnURL"
-                                        value=" "><input name="title"
-                                        type="hidden" value="Contact Request from Affluence Business Inc">
-                                    <div class=" form-row">
-                                        <div class="col-lg-6 form-group">
-                                            <div class="input-container"> <input type="text" name="fname"
-                                                    class="form-control" id="fname" placeholder="First Name*"> <i
-                                                    class="fa fa-user icon"></i> </div>
-                                        </div>
-                                        <div class="col-lg-6 form-group">
-                                            <div class="input-container"> <input type="text" name="lname"
-                                                    class="form-control" id="lname" placeholder="Last Name"> <i
-                                                    class="fa fa-user icon"></i> </div>
-                                        </div>
-                                    </div>
-                                    <div class=" form-row">
-                                        <div class="col-lg-6 form-group">
-                                            <div class="input-container"> <input type="email" class="form-control"
-                                                    name="email" id="email" placeholder="Business Email*"> <i
-                                                    class="fa fa-envelope icon"></i> </div>
-                                        </div>
-                                        <div class="col-lg-6 form-group">
-                                            <div class="input-container"> <input type="text" class="form-control"
-                                                    name="phone" id="phone" placeholder="Business Phone*"> <i
-                                                    class="fa fa-phone icon"></i> </div>
-                                        </div>
-                                    </div>
-                                    <div class=" form-row">
-                                        <div class="col-lg-12 form-group">
-                                            <div class="input-container"> <input type="text" name="company"
-                                                    class="form-control" id="company" placeholder="Company Name*"> <i
-                                                    class="fa fa-briefcase icon"></i> </div>
-                                        </div>
-                                    </div>
-                                    <div class=" form-row">
-                                        <div class="col-lg-12 form-group">
-                                            <div class="input-container"> <select name="contact" class="form-control">
-                                                    <option value="">No. of contacts</option>
-                                                    <option value="Less than 10k">Less than 10k</option>
-                                                    <option value="10k-50k">10k-50k</option>
-                                                    <option value="50k-100k">50k-100k</option>
-                                                    <option value="100k+">100k+</option>
-                                                </select> </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-group"> <textarea class="form-control " name="comments" rows="1"
-                                            placeholder="Message*"></textarea> </div>
-                                    <div class="form-group"> <label><input name="newslettersubscribe"
-                                                value="newslettersubscribe" checked="" type="checkbox"> I would like to
-                                            subscribe to your Newsletter.</label> </div>
-                                    <div class="form-group mt-4"><button type="submit" class="circle-fa">Submit Data
-                                            Counts and Quote Request &nbsp; <i
-                                                class="fa icon ion-android-arrow-forward"></i></button></div>
-                                </form>
+                                {% include 'form.html' %}
                             </div>
                         </div>
                     </div>
